--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="basic-layout.css">
+<title>BASIC DESIGN</title>
+</head>
 <body>
-<h1>Hello World</h1>
+
 </body>
 </html>
