--- a/basic-layout.html
+++ b/basic-layout.html
@@ -7,6 +7,9 @@
 <title>BASIC DESIGN</title>
 </head>
 <body>
+  <div class="header"></div>
+  <div class="main"></div>
+  <div class="footer"></div>
 
 </body>
 </html>
