--- a/basic-layout.html
+++ b/basic-layout.html
@@ -7,7 +7,18 @@
 <title>BASIC DESIGN</title>
 </head>
 <body>
-  <div class="header"></div>
+  <div class="header">
+    <h1>オランダ王国</h1>
+    <p>
+    西ヨーロッパにある国で首都は"アムステルダム"で面積はおよそ4万2000km<sup>2</sup>あります。
+    </p>
+    <p>
+    オランダは世界が誇るチーズが有名な国で山羊乳を使ったチーズやスパイスが入ったチーズもあります。
+    </p>
+    <p>
+    参考サイト<a href="https://www.meiji.co.jp/meiji-shokuiku/worldculture/netherlands/" target="olanda">meiji 明治の食育</a>
+    </p>
+</div>
   <div class="main"></div>
   <div class="footer"></div>
 
