--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             <ul class="navi">
                 <li><a href="#ABOUT">ABOUT</a></li>
                 <li><a href="#LICENSE">LICENSE</a></li>
-                <li><a href="#PAPER">PAPER</a></li>
                 <li><a href="#TEAM">TEAM</a></li>
-                <li><a href="#DOWNLOAD">DOWNLOAD</a></li>
             </ul>
         </div>
     </header>
@@ -34,8 +32,8 @@
         
             <div class="download">
             <p>
-                <a href="https://www.meiji.co.jp/meiji-shokuiku/worldculture/netherlands/" target="olanda" style="text-decoration:None;">
-                    DOWNLOAD (??GB)
+                <a href="https://cloud.box.com/s/bd3k0fi6avn32zpm" target="datasetlink" style="text-decoration:None;">
+                    DOWNLOAD (69GB)
                 </a>
             </p>
             </div>
@@ -44,42 +42,43 @@
         <div id="ABOUT"><br><br><h1>About</h1><br>
             <h2>MASSIVE SCALE</h2>
             
-            <div class="flex_container_left">
-                <div class="text_container_left">
+            <div class="container">
+                <div class="text">
                     <h3>
                         The CGRS Dataset is an unprecedented large-scale CG image dataset of retail shelves. It includes 200 classes of retail products and 100000 images. By using automatic annotation using 3DCG, we have achieved an overwhelming increase in scale compared to existing retail product shelf datasets.
                     </h3>
                 </div>
-                <div class="img_container_left">
+                <div class="image">
                     <img src="image/dataset_compare.png" alt="compare">
                 </div>
 
             </div>
 
-            <h2>DIVERSE</h2>
+            <h2>DIVERSITY</h2>
 
-            <div class="flex_container_right">
-                <div class="img_container_right">
-                    <img src="image/dataset_compare.png" alt="compare">
-                </div>
-                <div class="text_container_right">
+            <div class="container">
+
+                <div class="text">
                     <h3>
-                        The CGRS Dataset is an unprecedented large-scale CG image dataset of retail shelves. It includes 200 classes of retail products and 100000 images. By using automatic annotation using 3DCG, we have achieved an overwhelming increase in scale compared to existing retail product shelf datasets.
+                        In the 200 types of retail products we selected for creating the dataset, there are many items under the same brand with different flavors (thus, with package designs that closely resemble each other). We believe that the dataset we have created this time poses more challenging problems compared to existing datasets.
                     </h3>
                 </div>
-
-            </div>
-
-            <h2>PHOTOREAL</h2>
-
-            <div class="flex_container_left">
-                <div class="text_container_left">
-                    <h3>
-                        We synthesize photorealistic CG images by faithfully reproducing retail stores and by setting detailed parameters for each product material (e.g. reflectance).
-                    </h3>
-                </div>
-                <div class="img_container_left">
+                <div class="image">
                     <img src="image/renderedimage.png" alt="compare">
+                </div>
+
+            </div>
+
+            <h2>PHOTOREAL IMAGES</h2>
+
+            <div class="container">
+                <div class="text">
+                    <h3>
+                        We not only meticulously modeled retail products and shelves, but also established parameters considering physical aspects such as reflectance, and synthesized photorealistic CG images. Moreover, by adjusting lighting setups, we replicated real-world scenarios, depicting effects like saturation due to light reflection in some images.
+                    </h3>
+                </div>
+                <div class="image">
+                    <img src="image/shelves_noodle.png" alt="compare">
                 </div>
 
             </div>
@@ -111,13 +110,13 @@ CG Retail Shelves(CGRS) Dataset Terms of Use These CG Retail Shelves(CGRS) Datas
 8. These Terms shall be governed by and construed in accordance with the laws of Japan. Last update: 2023/12/25 Aoki Media Sensing Lab., Keio University/Panasonic Connect, Co., Ltd. (“Licensors”)
             </textarea>
         </div>
-        <div id="PAPER"><br><br><h1>Paper</h1></div>
+        <!-- <div id="PAPER"><br><br><h1>Paper</h1></div> -->
 
         <div id="TEAM"><br><br><h1>Team</h1>
             <ul>
-                <li><a href="https://aoki-medialab.jp/"><img src="image/logo_sans_grad.png" alt="aolab_logo" width="200pt"></a></li>
-                <li><a href="https://www.keio.ac.jp/ja/"><img src="image/keio_logo.png" alt="keio_logo" width="200pt"></a></li>
-                <li><a href="https://www.keio.ac.jp/ja/"><img src="image/pana_logo.png" alt="keio_logo" width="200pt"></a></li>
+                <li style="margin-right:40px;"><a href="https://aoki-medialab.jp/"><img src="image/logo_sans_grad.png" alt="aolab_logo" width="200pt"></a></li>
+                <li style="margin-right:40px;"><a href="https://www.keio.ac.jp/ja/"><img src="image/keio_logo.png" alt="keio_logo" width="200pt"></a></li>
+                <li style="margin-right:40px;"><a href="https://www.keio.ac.jp/ja/"><img src="image/pana_logo.png" alt="keio_logo" width="200pt"></a></li>
 
             </ul>
             <style>
@@ -127,7 +126,6 @@ CG Retail Shelves(CGRS) Dataset Terms of Use These CG Retail Shelves(CGRS) Datas
             </style>
         </div>
 
-        <div id="DOWNLOAD"><br><br><h1>Download</h1></div>
 
     </div>
 
